fix positioning of connect button on iphone part 3

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -258,7 +258,7 @@ body {
   }
   a#connect {
     padding-top: 7px;
-    padding-right: 5px;
+    padding-right: 20px;
     padding-bottom: 11px;
     margin-bottom: 11px;
     text-align: center;
